--- a/サーバ構築手順書.md
+++ b/サーバ構築手順書.md
@@ -1,3 +1,64 @@
+
+
+sudo apt install vsftpd
+sudo apt-get install vim
+
+
+設定ファイルの変更
+sudo vim /etc/vsftpd.conf 
+下記を変更。
+
+#ファイルシステムを変更するFTPコマンドを許可する（コメントを外す）
+write_enable=YES
+
+#デフォルトのファイルマスク設定を変更し他ユーザからのリードを許可（コメントを外す）
+local_umask=022
+
+#アスキーモードのアップロードを許可する（コメントを外す）
+ascii_upload_enable=YES
+#アスキーモードのダウンロードを許可する（コメントを外す）
+ascii_download_enable=YES
+
+#設定したディレクトリより上層への移動を禁止する（コメントを外す）
+chroot_local_user=YES
+#YESの場合、リストアップされたユーザはchrootの対象から除外される（コメントを外す）
+chroot_list_enable=YES
+#リストアップのファイルの場所を指定する（コメントを外す）
+chroot_list_file=/etc/vsftpd.chroot_list
+
+#サブフォルダを含む一括アップロード・ダウンロードを出来るようにする（コメントを外す）
+ls_recurse_enable=YES
+
+#ルートディレクトリを指定する（最後に追加）
+local_root=/var/www
+
+#seccomp filter をオフを追記する（最後に追加）
+seccomp_sandbox=NO
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #サーバ環境構築手順
 
 1. VirtualBoxのインストール
@@ -37,6 +98,9 @@ $ vagrant up
 7. vagrant@ubuntu-bionic上で
 以下コマンドを実行
 $ pip install watchdog
+$ apt install unzip
+設定
+インフラ
 
 memo------
 起動
